kubernetes/autobrr/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: autobrr
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: autobrr
  template:
    metadata:
      labels:
        app: autobrr
    spec:
      containers:
      - name: autobrr
        image: ghcr.io/autobrr/autobrr:v1.87.0@sha256:1a72b15b3cc3899082de38fbc05efab0dc0498135be359aa280078876c68f455
        ports:
        - containerPort: 7474
        - name: metrics
          containerPort: 9074
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: autobrr-config
