kubernetes/autobrr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: autobrr
  annotations:
    reloader.stakater.com/auto: 'true'
    secret.reloader.stakater.com/reload: iscsi-chap-secret

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: autobrr
  template:
    metadata:
      labels:
        app: autobrr
    spec:
      containers:
      - name: autobrr
        image: ghcr.io/autobrr/autobrr
        ports:
        - containerPort: 7474
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
      - name: config
        iscsi:
          targetPortal: 172.19.74.139
          iqn: iqn.2000-01.com.synology:fs2.autobrr.05f22bcf4f5
          lun: 1
          fsType: ext4
          chapAuthDiscovery: false
          chapAuthSession: true
          secretRef:
            name: iscsi-chap-secret
