kubernetes/autobrr/service-metrics.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: autobrr-metrics
  labels:
    app: autobrr
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: /metrics
    prometheus.io/port: '9074'

spec:
  ports:
  - port: 9074
    targetPort: metrics
    protocol: TCP
    name: metrics
  selector:
    app: autobrr
