kubernetes/autobrr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: autobrr
  labels:
    app: autobrr
  annotations:
    ak-type: oidc
    ak-oidc-callback: /api/auth/oidc/callback
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: autobrr
    gethomepage.dev/description: IRC Torrent Watcher
    gethomepage.dev/group: Downloads
    gethomepage.dev/icon: autobrr.png

spec:
  tls:
  - hosts:
    - autobrr.k.oneill.net
    secretName: autobrr-tls
  rules:
  - host: autobrr.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: autobrr
            port:
              number: 7474
